--- a/doc/_static/custom.css
+++ b/doc/_static/custom.css
@@ -2,9 +2,10 @@
 /*
     custom.css
 
-    Copyright (C) 2020 Miðeind ehf.
-    See the Greynir GitHub repository at
-    https://github.com/mideind/GreynirPackage
+    Copyright (C) 2021 Miðeind ehf.
+
+    See the GreynirCorrect GitHub repository at
+    https://github.com/mideind/GreynirCorrect
     for copyright and licensing information.
 
     This style sheet overrides stuff from the standard Sphinx Alabaster
