Re-exposed the tokenize() function in accordance with the documentation; fixed more copyright declarations

--- a/doc/_static/custom.css
+++ b/doc/_static/custom.css
@@ -2,7 +2,7 @@
 /*
     custom.css
 
-    Copyright (C) 2021 Miðeind ehf.
+    Copyright © 2025 Miðeind ehf.
 
     See the GreynirCorrect GitHub repository at
     https://github.com/mideind/GreynirCorrect
